--- a/app/css/all.css
+++ b/app/css/all.css
@@ -158,6 +158,10 @@ li:last-child:after {
   width: 100vw;
   height: 100vh;
   z-index: 3;
+  opacity: 1;
+  -webkit-transition: opacity 0.2s linear;
+  -o-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
   background-color: rgba(0, 0, 0, 0.5); }
   .popup .form-wraрpper {
     width: 464px;
@@ -167,15 +171,47 @@ li:last-child:after {
     position: relative; }
     .popup .form-wraрpper .close {
       position: absolute;
-      right: -25px;
-      padding-left: 4px;
+      right: -27px;
+      padding-left: 6px;
       padding-top: 5px;
       -webkit-box-sizing: border-box;
               box-sizing: border-box;
-      top: -25px;
-      width: 24px;
+      top: -27px;
+      width: 27px;
       background: #767676;
       cursor: pointer; }
+  .popup .feedback-title {
+    color: #535353;
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 33px;
+    margin-bottom: 26px;
+    color: #767676; }
+  .popup input {
+    display: block;
+    margin: 0 auto;
+    width: 339px;
+    height: 40px;
+    border: 1px solid #c3c3c3;
+    margin-bottom: 13px; }
+  .popup .input-description {
+    text-align: center;
+    margin-bottom: 1px; }
+  .popup textarea {
+    resize: none;
+    display: block;
+    margin: auto; }
+  .popup .send {
+    display: block;
+    width: 128px;
+    margin-top: 26px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16px;
+    color: white;
+    background: #767676; }
 
 .footer {
   position: relative;
