--- a/app/scss/popup.scss
+++ b/app/scss/popup.scss
@@ -3,6 +3,8 @@
   width: 100vw;
   height: 100vh;
   z-index: 3;
+  opacity: 1;
+  transition: opacity 0.2s linear;
   background-color: rgba(0,0,0,0.5);
   .form-wraрpper {
     width: 464px;
@@ -12,14 +14,57 @@
     position: relative;
     .close {
       position: absolute;
-      right: -25px;
-      padding-left: 4px;
+      right: -27px;
+      padding-left: 6px;
       padding-top: 5px;
       box-sizing: border-box;
-      top: -25px;
-      width: 24px;
+      top: -27px;
+      width: 27px;
       background: $dark-gray;
       cursor: pointer;
     }
   }
+
+  .feedback-title {
+    color: $darkest-gray;
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 33px;
+    margin-bottom: 26px;
+    color: $dark-gray;
+  }
+
+  input {
+    display: block;
+    margin: 0 auto;
+    width: 339px;
+    height: 40px;
+    border: 1px solid #c3c3c3;
+    margin-bottom: 13px;
+  }
+
+  .input-description {
+    text-align: center;
+    margin-bottom: 1px;
+  }
+
+  textarea {
+    resize: none;
+    display: block;
+    margin: auto;
+  }
+
+  .send {
+    display: block;
+    width: 128px;
+    margin-top: 26px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16px;
+    color: white;
+    background: $dark-gray;
+  }
+
 }
