--- a/app/scss/all.scss
+++ b/app/scss/all.scss
@@ -6,5 +6,6 @@
 @import "slider.scss";
 @import "content.scss";
 @import "popup.scss";
+@import "company-description.scss";
 @import "footer.scss";
 @import "media.scss";
