--- a/app/scss/default.scss
+++ b/app/scss/default.scss
@@ -1,12 +1,14 @@
 .wrapper {
   width: 1005px;
   margin: 0 auto;
+
 }
 
 body {
   font-family: PT_Sans;
   font-size: 14px;
   line-height: 22px;
+  position: relative;
 }
 
 .clearfix:after {
