--- a/app/css/all.css
+++ b/app/css/all.css
@@ -1,26 +1,11 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=PT+Sans");
 @font-face {
   font-family: OpenSansCondensed;
-  src: url("../fonts/Open_Sans_Condensed/OpenSansCondensed-Light.ttf"); }
-
-@font-face {
-  font-family: PT_Sans;
-  src: url("../fonts/PT_Sans/PT_Sans-Web-Regular.ttf"); }
-
-.wrapper {
-  width: 1005px;
-  margin: 0 auto; }
-
-body {
-  font-family: PT_Sans;
-  font-size: 14px;
-  line-height: 22px;
-  position: relative; }
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both; }
+  src: url("../fonts/Open_Sans_Condenced/OpenSans-CondLight-webfont.eot");
+  src: url("../fonts/Open_Sans_Condenced/OpenSans-CondLight-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/Open_Sans_Condenced/OpenSans-CondLight-webfont.woff") format("woff"), url("../fonts/Open_Sans_Condenced/OpenSans-CondLight-webfont.ttf") format("truetype"), url("../fonts/OpenSans-CondLight-webfont.svg#open_sanscondensed_light") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 
 .header {
   background: #DBDBDB;
@@ -151,6 +136,8 @@ li:last-child:after {
       text-decoration: none; }
       .content .left-block .products-navigation a:active {
         text-decoration: underline; }
+      .content .left-block .products-navigation a:hover {
+        text-decoration: underline; }
     .content .left-block .products-navigation .category-navigation {
       font-size: 14px;
       margin-left: 1px;
@@ -165,13 +152,15 @@ li:last-child:after {
           width: 1em; }
         .content .left-block .products-navigation .category-navigation li a:active {
           text-decoration: underline; }
+        .content .left-block .products-navigation .category-navigation li a:hover {
+          text-decoration: underline; }
       .content .left-block .products-navigation .category-navigation a {
         color: black;
         text-decoration: none; }
 
 .content .right-block {
   padding-top: 4px;
-  float: left;
+  float: right;
   margin-left: 20px;
   width: 781px;
   padding-bottom: 50px;
@@ -340,3 +329,31 @@ li:last-child:after {
   .footer .description {
     position: relative;
     top: -6px; }
+
+.wrapper {
+  width: 1000px;
+  margin: 0 auto;
+  padding: 0px 10px 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+  min-height: 100%; }
+
+body {
+  font-family: PT Sans;
+  font-size: 14px;
+  line-height: 22px;
+  position: relative; }
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.main-wrapper {
+  position: relative;
+  min-height: 100%; }
+
+@media screen and (max-width: 1248px) {
+  .slider {
+    display: none; } }
