--- a/app/css/all.css
+++ b/app/css/all.css
@@ -220,17 +220,29 @@ li:last-child:after {
   width: 100vw;
   height: 100vh;
   z-index: 3;
+  opacity: 0;
+  display: none;
   -webkit-transition: opacity 0.2s linear;
   -o-transition: opacity 0.2s linear;
   transition: opacity 0.2s linear;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  display: none; }
+  background-color: rgba(0, 0, 0, 0.5); }
+  .popup .popup-mask {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    left: 0;
+    top: 0;
+    -webkit-transition: opacity 0.2s linear;
+    -o-transition: opacity 0.2s linear;
+    transition: opacity 0.2s linear;
+    background-color: rgba(0, 0, 0, 0.5); }
   .popup .form-wraрpper {
     width: 464px;
     height: 578px;
     background-color: white;
     margin: 8vh auto;
+    z-index: 4;
     position: relative; }
     .popup .form-wraрpper .close {
       position: absolute;
