--- a/app/scss/content.scss
+++ b/app/scss/content.scss
@@ -75,20 +75,19 @@
             width: 1em;
           }
 
+          a {
+            color: $dark-gray;
+            text-decoration: none;
+          }
+
           a:active {
             text-decoration: underline;
           }
 
           a:hover {
             text-decoration: underline;
+            color: black;
           }
-
-        }
-
-
-        a {
-          color: black;
-          text-decoration: none;
 
         }
 
