--- a/app/css/all.css
+++ b/app/css/all.css
@@ -377,3 +377,110 @@ body {
 @media screen and (max-width: 1248px) {
   .slider {
     display: none; } }
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .wrapper .left-block .price-list {
+    margin-top: 12px; }
+  .wrapper {
+    max-width: 100%; }
+  .content .right-block {
+    padding-top: 30px;
+    margin: auto;
+    float: none;
+    clear: both;
+    width: 780px; }
+  .company-description {
+    width: 100%;
+    display: block;
+    float: none;
+    margin-bottom: 330px; }
+    .company-description .description-content {
+      width: 100%;
+      margin-bottom: 30px; }
+  .title-right {
+    line-height: 50px; } }
+
+@media screen and (max-width: 767px) {
+  .wrapper {
+    max-width: 100%; }
+    .wrapper .left-block .price-list {
+      margin-top: 12px; }
+  .header {
+    padding-top: 20px;
+    height: 136px; }
+    .header .phones-callback {
+      margin-top: 0; }
+    .header .logo {
+      margin-top: 0;
+      width: 35%;
+      height: auto; }
+    .header .phone {
+      font-size: 22px;
+      font-weight: bold;
+      line-height: 25px; }
+  .company-description {
+    width: 100%;
+    display: block;
+    margin-bottom: 0; }
+    .company-description .description-content {
+      width: 100%;
+      margin-bottom: 30px; }
+  .menu {
+    padding-top: 14px;
+    padding-bottom: 9px; }
+    .menu .navigation ul {
+      font-size: 20px;
+      padding-top: 9px; }
+  .content .right-block {
+    clear: both;
+    padding: 0;
+    padding-top: 30px; }
+  .footer {
+    position: static;
+    height: auto;
+    padding-bottom: 20px; }
+    .footer .wrapper {
+      display: block; }
+    .footer .footer-navigation, .footer .footer-logo {
+      padding-left: 10px; }
+    .footer .footer-navigation {
+      height: auto;
+      margin-top: 20px; } }
+
+@media screen and (max-width: 819px) {
+  .content .wrapper .right-block {
+    width: 520px;
+    margin: auto;
+    clear: both;
+    margin-top: 150px;
+    float: none; } }
+
+@media screen and (max-width: 600px) {
+  .header {
+    height: 260px; }
+    .header .logo {
+      min-width: 280px;
+      margin-bottom: 20px; }
+    .header .phones-callback {
+      float: left;
+      clear: both; }
+  .aside .news-title {
+    font-size: 30px; }
+  .info, .footer-navigation, .footer-logo {
+    max-width: 100%;
+    padding-left: 10px; }
+  .footer {
+    padding-bottom: 40px; } }
+
+@media screen and (max-width: 534px) {
+  .content .right-block {
+    max-width: 100%; }
+    .content .right-block .product {
+      width: 100%;
+      height: auto; }
+      .content .right-block .product img {
+        display: block;
+        margin: auto; }
+      .content .right-block .product .description {
+        margin-bottom: 35px;
+        text-align: center; } }
